# prompt_hr

./: README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: custom-build.js  package-lock.json  package.json  vite.config.js
prompt_hr/: __init__.py  custom_methods.py  hooks.py  modules.txt  override.py  scheduler_methods.py  utils.py
prompt_hr/api/: main.py  resume_parsing.py
prompt_hr/fixtures/: confirmation_evaluation_parameter.json  custom_field.json  email_template.json  factor_category_parameters.json  kanban_board.json  letter_head.json  notification.json  number_card.json  probation_question.json  property_setter.json  role.json  type_of_document.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
prompt_hr/override_test_cases/: test_leave_allocation_override.py
prompt_hr/overrides/: attendance_override.py  attendance_request.py  attendance_request_override.py  compensatory_leave_request_override.py  full_and_final_statement_override.py  interview_override.py  job_offer_override.py  job_requisition_override.py  leave_allocation_override.py  leave_application_override.py  leave_encashment_override.py  leave_policy_assignment_override.py  payroll_entry_override.py  process_loan_interest_accrual_override.py  project_override.py  salary_slip_override.py  shift_request_override.py  timesheet_override.py  workflow_override.py
prompt_hr/py/: accounting_team_notifications.py  additional_salary.py  appointment_letter.py  appraisal_letter.py  attendance.py  attendance_penalty_api.py  attendance_request.py  employee.py  (+45 more)
(+1078 files in other folders)
